--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,10 @@ PyRect==0.2.0
 PyScreeze==0.1.28
 pytweening==1.0.4
 tomli==2.0.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
+idna==3.4
+PyAudio==0.2.12
+requests==2.28.1
+SpeechRecognition==3.9.0
+urllib3==1.26.13
